--- a/index.html
+++ b/index.html
@@ -8,24 +8,30 @@
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
 	<script type="text/javascript" src="js/Jcarousel.js"></script>
 	<script>
-		$(document).ready(function(){
+	$(document).ready(function(){
+		$('.pull').click(function() {
+			$('.nav-menu').toggle();
+		});
 
-			$('.pull').click(function() {
-				$('.nav-menu').toggle();
-			});
-	// This initialises carousels on the container elements specified, in this case, carousel1.
-	$(".carousel").CloudCarousel(		
-	{			
-		xPos: 128,
-		yPos: 32,
-		xRadius: 52,
-		yRadius: 32,
-		autoRotate: 'left',
-		autoRotateDelay: 3000,
-		bringToFront: true,
-	}
-	);
-});
+		$('.process-button').click(function() {
+			$('.process-content').toggle();
+		});
+
+		$(window).scroll(function () {
+			$('.process-content').show();
+		});
+
+		$(".carousel").CloudCarousel(		
+		{			
+			xPos: 128,
+			yPos: 32,
+			xRadius: 52,
+			yRadius: 32,
+			autoRotate: 'left',
+			autoRotateDelay: 3000,
+			bringToFront: true,
+		});
+	});
 
 	</script>
 </head>
@@ -71,109 +77,120 @@
 		</div>
 	</div>
 	<div class="process-area">
-		<img src="images/process-button.png">
+		<img class="process-button" src="images/process-button.png">
+	</div>
+	<div class="process-content">
+		<div class="container">
+			<div class="process-navigation">
+			</div>
+			<div class="process-panel">
+				<img src="">
+				<h2>The History of Our Cognac</h2>
+				<p>Lorem ipsum dolor sit amet, an tempor inermis sapientem sed. Illum nostrud omittantur usu in, mea stet nibh veniam ne, no mundi consulatu pro. Harum accusata deseruisse ea vis.</p>
+			</div>
+		</div>
 	</div>
 
-<!-- DAN MARKUP! -->
+	<!-- DAN MARKUP! -->
 	<div class="footer">
 		<div class="footer-ribbon"></div>
-			<div class="footer-container">
-				<!-- STORE LOCATOR -->
-				<div class="store-locator">
-					<h1 class="title">store <span>locator</span></h1>
-						<img class="title-line" src="images/store-locator-title-line.png" />
-						<img class="store-map" src="images/store-map.png" alt="" />
-						<img class="find-it" src="images/find-it.png" alt="" />
-						<img class="store-locator-side-divider" src="images/store-locator-side-divider.png" alt="" />
-				</div>
-				<!-- SPECIAL EVENTS -->
-				<div class="special-events">
-					<h1 class="title">special <span>events</span></h1>
-						<img class="title-line" src="images/store-locator-title-line.png" />
-							<div class="event-schedule">
-								<div class="area">
-									<p>party in cabo</p>
-									<p>04/23/13</p>
-									<img class="events-divider" src="images/events-divider.png" alt="" />
-									<img src="images/event-side-divider.png" alt="" />
-								</div>
-								<div class="area">
-									<p>party in cabo</p>
-									<p>04/23/13</p>
-									<img class="events-divider" src="images/events-divider.png" alt="" />
-									<img src="images/event-side-divider.png" alt="" />
-								</div>
-								<div class="area">
-									<p>party in cabo</p>
-									<p>04/23/13</p>
-									<img class="events-divider" src="images/events-divider.png" alt="" />
-									<img src="images/event-side-divider.png" alt="" />
-								</div>
-								<div class="area">
-									<p>party in cabo</p>
-									<p>04/23/13</p>
-									<img class="events-divider" src="images/events-divider.png" alt="" />
-									<img src="images/event-side-divider.png" alt="" />
-								</div>
-								<div class="area">
-									<p>party in cabo</p>
-									<p>04/23/13</p>
-									<img class="events-divider" src="images/events-divider.png" alt="" />
-									<img src="images/event-side-divider.png" alt="" />
-								</div>
-								<div class="area">
-									<p>party in cabo</p>
-									<p>04/23/13</p>
-									<img class="events-divider" src="images/events-divider.png" alt="" />
-									<img src="images/event-side-divider.png" alt="" />
-								</div>
-							</div>
-							<img class="events-button" src="images/events-button.png" alt="" />
-							<img class="store-locator-side-divider" src="images/store-locator-side-divider.png" alt="" />
-						</div>
-						<!-- CONTACT BON FUN -->
-						<div class="contact-bon-fun">
-							<img class="footer-logo" src="images/footer-logo.png" alt="" />
-							<img class="sales-media" src="images/sales-media.png" alt="" />
-							<div class="contact-left">
-								<p>sales</p>
-								<p>media</p>
-							</div>
-							<div class="contact-right">
-								<p>800 564 8970</p>
-								<img class="footer-phone" src="images/footer-phone.png" alt="" >
-							</div>
-							<img class="contact-us-bottom-divider" src="images/contact-us-bottom-divider.png" alt="" />
-							<img class="fb-icon" src="images/fb-icon.png" alt="" />
-							<p class="fb-likes">400 People like this</p>
-							<img class="fb-users" src="images/fb-users.png" alt="" />
-						</div>
-						<!-- FOOTER NAVIGATION -->
-						<div class="footer-nav">
-							<ul>
-								<li><a href="#">home</a></li>
-								<li><a href="#">events</a></li>
-								<li><a href="#">get social</a></li>
-								<li><a href="#">store locator</a></li>
-								<li><a href="#">products</a></li>
-								<li><a href="#">blog</a></li>
-								<li><a href="#">about us</a></li>
-								<li><a href="#">contact us</a></li>
-							</ul>
-						</div>
-							<img class="footer-bottom-section-divider" src="images/footer-bottom-section-divider.png" alt="" />
-							<div class="bottom-icons">
-								<ul>
-									<li><img src="images/instagram.png" alt=""/></li>
-									<li><img src="images/facebook.png" alt=""/></li>
-									<li><img src="images/twitter.png" alt=""/></li>
-									<li><img src="images/linkedin.png" alt=""/></li>
-								</ul>
-							</div>
+		<div class="footer-container">
+			<!-- STORE LOCATOR -->
+			<div class="store-locator">
+				<h1 class="title">store <span>locator</span></h1>
+				<img class="title-line" src="images/store-locator-title-line.png" />
+				<img class="store-map" src="images/store-map.png" alt="" />
+				<img class="find-it" src="images/find-it.png" alt="" />
+				<img class="store-locator-side-divider" src="images/store-locator-side-divider.png" alt="" />
+			</div>
+			<!-- SPECIAL EVENTS -->
+			<div class="special-events">
+				<h1 class="title">special <span>events</span></h1>
+				<img class="title-line" src="images/store-locator-title-line.png" />
+				<div class="event-schedule">
+					<div class="area">
+						<p>party in cabo</p>
+						<p>04/23/13</p>
+						<img class="events-divider" src="images/events-divider.png" alt="" />
+						<img src="images/event-side-divider.png" alt="" />
 					</div>
+					<div class="area">
+						<p>party in cabo</p>
+						<p>04/23/13</p>
+						<img class="events-divider" src="images/events-divider.png" alt="" />
+						<img src="images/event-side-divider.png" alt="" />
+					</div>
+					<div class="area">
+						<p>party in cabo</p>
+						<p>04/23/13</p>
+						<img class="events-divider" src="images/events-divider.png" alt="" />
+						<img src="images/event-side-divider.png" alt="" />
+					</div>
+					<div class="area">
+						<p>party in cabo</p>
+						<p>04/23/13</p>
+						<img class="events-divider" src="images/events-divider.png" alt="" />
+						<img src="images/event-side-divider.png" alt="" />
+					</div>
+					<div class="area">
+						<p>party in cabo</p>
+						<p>04/23/13</p>
+						<img class="events-divider" src="images/events-divider.png" alt="" />
+						<img src="images/event-side-divider.png" alt="" />
+					</div>
+					<div class="area">
+						<p>party in cabo</p>
+						<p>04/23/13</p>
+						<img class="events-divider" src="images/events-divider.png" alt="" />
+						<img src="images/event-side-divider.png" alt="" />
+					</div>
+				</div>
+				<img class="events-button" src="images/events-button.png" alt="" />
+				<img class="store-locator-side-divider" src="images/store-locator-side-divider.png" alt="" />
+			</div>
+			<!-- CONTACT BON FUN -->
+			<div class="contact-bon-fun">
+				<img class="footer-logo" src="images/footer-logo.png" alt="" />
+				<img class="sales-media" src="images/sales-media.png" alt="" />
+				<div class="contact-left">
+					<p>sales</p>
+					<p>media</p>
+				</div>
+				<div class="contact-right">
+					<p>800 564 8970</p>
+					<img class="footer-phone" src="images/footer-phone.png" alt="" >
+				</div>
+				<img class="contact-us-bottom-divider" src="images/contact-us-bottom-divider.png" alt="" />
+				<img class="fb-icon" src="images/fb-icon.png" alt="" />
+				<p class="fb-likes">400 People like this</p>
+				<img class="fb-users" src="images/fb-users.png" alt="" />
+			</div>
+			<!-- FOOTER NAVIGATION -->
+			<div class="footer-nav">
+				<ul>
+					<li><a href="#">home</a></li>
+					<li><a href="#">events</a></li>
+					<li><a href="#">get social</a></li>
+					<li><a href="#">store locator</a></li>
+					<li><a href="#">products</a></li>
+					<li><a href="#">blog</a></li>
+					<li><a href="#">about us</a></li>
+					<li><a href="#">contact us</a></li>
+				</ul>
+			</div>
+			<img class="footer-bottom-section-divider" src="images/footer-bottom-section-divider.png" alt="" />
+			<div class="bottom-icons">
+				<ul>
+					<li><img src="images/instagram.png" alt=""/></li>
+					<li><img src="images/facebook.png" alt=""/></li>
+					<li><img src="images/twitter.png" alt=""/></li>
+					<li><img src="images/linkedin.png" alt=""/></li>
+				</ul>
+			</div>
+		</div>
 
-			<!-- USED FOR BOTTOM FULL WIDTH SECTION -->
-			<div class="footer-bottom-section"></div>
+		<!-- USED FOR BOTTOM FULL WIDTH SECTION -->
+		<div class="footer-bottom-section"></div>
 	</div>
 
 
