Changes from Tuesday 8-20-13, 90%-95% done homepage

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 	</script>
 </head>
 <body>
+	
 	<div class="header">
 		<div class="container">
 			<div class="logo">
-				
 			</div>
 			<div class="pull">
 			</div>
@@ -63,215 +63,252 @@
 	<div class="slider-area">
 		<div class="slider">
 			<ul>
-				<li><img src="images/slide1.png"></li>
-			</ul>
-			<div class="flag">
-				<div class="carousel">            
-					<!-- All images with class of "cloudcarousel" will be turned into carousel items -->
-					<!-- You can place links around these images -->
-					<img class="cloudcarousel" src="images/red-wine.png" />
-					<img class="cloudcarousel" src="images/purple-wine.png"/>
-					<img class="cloudcarousel" src="images/white-wine.png" />
+				<li><img src="images/slide1.png">
+					<h1>Wine<span>Infused</span><span>
+						<br />Cognac</span></h1>
+						<div class="slider-bottom-line"></div>
+					</li>
+				</ul>
+				<div class="mobile-main-panel">
+					<div class="flag-horizontal">
+					</div>
+					<div class="mobile-wine-images">
+						<img src="images/purple-wine-shadow.png" />
+						<img src="images/red-wine-shadow.png" />
+						<img src="images/white-wine-shadow.png" />
+					</div>
+				</div>
+				<div class="flag">
+					<div class="carousel">            
+						<!-- All images with class of "cloudcarousel" will be turned into carousel items -->
+						<!-- You can place links around these images -->
+						<img class="cloudcarousel" src="images/red-wine.png" />
+						<img class="cloudcarousel" src="images/purple-wine.png"/>
+						<img class="cloudcarousel" src="images/white-wine.png" />
+					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-	<div class="process-area">
-		<img class="process-button" src="images/process-button.png">
-	</div>
-	<div class="process-content">
-		<div class="container">
-			<div class="process-navigation">
-				<div class="process one">1</div>
-				<div class="process two">2</div>
-				<div class="process three">3</div>
-				<div class="process four">4</div>
-				<div class="process five">5</div>
-				<img src="images/process-history-icon.png" class="process-history-icon process-icon" />
-				<img src="images/process-growth-icon.png" class="process-growth-icon process-icon" />
-				<img src="images/process-distillation-icon.png" class="process-distillation-icon process-icon" />
-				<img src="images/process-aging-icon.png" class="process-aging-icon process-icon" />
-				<img src="images/process-infusion-icon.png" class="process-infusion-icon process-icon" />
-			</div>
-			<div class="process-panel">
+		<div class="process-area">
+			<img class="process-button" src="images/process-button.png">
+		</div>
+		<div class="process-content">
+			<div class="container">
+				<div class="process-navigation">
+					<div class="process-navigation-bar"></div>
+					<div class="process one selected">1</div>
+					<div class="process two">2</div>
+					<div class="process three">3</div>
+					<div class="process four">4</div>
+					<div class="process five">5</div>
+					<img src="images/process-history-icon.png" class="process-history-icon process-icon" />
+					<img src="images/process-growth-icon.png" class="process-growth-icon process-icon" />
+					<img src="images/process-distillation-icon.png" class="process-distillation-icon process-icon" />
+					<img src="images/process-aging-icon.png" class="process-aging-icon process-icon" />
+					<img src="images/process-infusion-icon.png" class="process-infusion-icon process-icon" />
+				</div>
+				<div class="process-panel">
+					<div class="process-small-nav-left"></div>
+					<div class="process-small-nav-right"></div>
+					<div class="process-stage-icon">
+						<div class="process-lines-outer">
+							<div class="process-lines-inner">
+								<h6>Stage<span>1</span></h6>
+							</div>
+						</div>
+						<img src="images/process-history-logo.png" />
+					</div>
+					<img src="images/process-history-image.png" />
+					<h2>The History of our cognac</h2>
+					<p>Lorem ipsum dolor sit amet, an tempor inermis sapientem sed. Illum nostrud omittantur usu in, mea stet nibh veniam ne, no mundi consulatu pro. Harum accuesata deseruisse ea vis.</p>
+				</div>
 			</div>
 		</div>
-	</div>
-	<div class="grid-area">
-		<div class="grid-wrapper">
-			<div class="grid-row">
-				<div class="grid-box-half grid-box">
-					<img src="images/Grid-Images/image1.png" />
-					<div class="grid-cover-tall-red grid-cover">
-						<h2>Circle of Fun</h2>
-						<div class="dotted-shadow">
-							<ul>
-								<li>Socialize /</li>
-								<li>Party /</li>
-								<li>Meet other bonfun fans /</li>
-							</ul>
+		<div class="grid-area">
+			<div class="grid-wrapper">
+				<div class="grid-slideout grid-top">
+					<div class="grid-slideout-sidebar">
+						<div class="grid-slideout-sidebar-tab"></div>
+						<h3>Join the circle of fun</h3>
+						<p>Nonumes vituperatoribus at cum, veniam quaeque adolescens duo et, ex persequeris consectetuer mea. Consequat necessitatibus sea id, vis no wisi omnesque. Harum accusata deseruisse...</p>
+						<h4>More > </h4>
+						<div class="grid-slideout-sidebar-pointer"></div>
+					</div>
+				</div>
+				<div class="grid-row">
+					<div class="grid-box-half grid-box">
+						<img src="images/Grid-Images/image1.png" />
+						<div class="grid-cover-tall-red grid-cover grid-top-row">
+							<h2>Circle of Fun</h2>
+							<div class="dotted-shadow">
+								<ul>
+									<li>Socialize /</li>
+									<li>Party /</li>
+									<li>Meet other bonfun fans /</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div class="grid-box-sixth">
+						<img src="images/Grid-Images/image2.png" />
+						<div class="grid-cover-short-orange grid-cover-vert">
+							<h2>Infusions</h2>
+						</div>
+					</div>
+					<div class="grid-box-twosixth">
+						<img src="images/Grid-Images/image3.png" />
+						<div class="grid-cover-wide-red grid-cover-vert">
+							<h2>Store Locator</h2>
 						</div>
 					</div>
 				</div>
-				<div class="grid-box-sixth">
-					<img src="images/Grid-Images/image2.png" />
-					<div class="grid-cover-short-orange grid-cover-vert">
-						<h2>Infusions</h2>
+				<div class="grid-slideout grid-middle"></div>
+				<div class="grid-row">
+					<div class="grid-box-twosixth">
+						<img src="images/Grid-Images/image4.png" />
+						<div class="grid-cover-wide-orange grid-cover-vert">
+							<h2>Cognac Grapes</h2>
+						</div>
+					</div>
+					<div class="grid-box-sixth">
+						<img src="images/Grid-Images/image5.png" />
+						<div class="grid-cover-short-red grid-cover-vert">
+							<h2>Cognac, France</h2>
+						</div>
+					</div>
+					<div class="grid-box-half">
+						<img src="images/Grid-Images/image6.png" />
+						<div class="grid-cover-tall-orange right grid-cover">
+							<h2>Fun Music</h2>
+						</div>
 					</div>
 				</div>
-				<div class="grid-box-twosixth">
-					<img src="images/Grid-Images/image3.png" />
-					<div class="grid-cover-wide-red grid-cover-vert">
-						<h2>Store Locator</h2>
+				<div class="grid-slideout grid-bottom"></div>
+				<div class="grid-row">
+					<div class="grid-box-half">
+						<img src="images/Grid-Images/image9.png" />
+						<div class="grid-cover-tall-red grid-cover">
+							<h2>How to Party</h2>
+						</div>
+
 					</div>
-				</div>
-			</div>
-			<div class="grid-row">
-				<div class="grid-box-twosixth">
-					<img src="images/Grid-Images/image4.png" />
-					<div class="grid-cover-wide-orange grid-cover-vert">
-						<h2>Cognac Grapes</h2>
+					<div class="grid-box-twosixth">
+						<img src="images/Grid-Images/image8.png" />
+						<div class="grid-cover-wide-orange grid-cover-vert">
+							<h2>Special Events</h2>
+						</div>
 					</div>
-				</div>
-				<div class="grid-box-sixth">
-					<img src="images/Grid-Images/image5.png" />
-					<div class="grid-cover-short-red grid-cover-vert">
-						<h2>Cognac, France</h2>
-					</div>
-				</div>
-				<div class="grid-box-half">
-					<img src="images/Grid-Images/image6.png" />
-					<div class="grid-cover-tall-orange right grid-cover">
-						<h2>Fun Music</h2>
-					</div>
-				</div>
-			</div>
-			<div class="grid-row">
-				<div class="grid-box-half">
-					<img src="images/Grid-Images/image9.png" />
-					<div class="grid-cover-tall-red grid-cover">
-						<h2>How to Party</h2>
-					</div>
-					
-				</div>
-				<div class="grid-box-twosixth">
-					<img src="images/Grid-Images/image8.png" />
-					<div class="grid-cover-wide-orange grid-cover-vert">
-						<h2>Special Events</h2>
-					</div>
-				</div>
-				<div class="grid-box-sixth">
-					<img src="images/Grid-Images/image7.png" />
-					<div class="grid-cover-short-red grid-cover-vert">
-						<h2>Brand Ambassadors</h2>
+					<div class="grid-box-sixth">
+						<img src="images/Grid-Images/image7.png" />
+						<div class="grid-cover-short-red grid-cover-vert">
+							<h2>Brand Ambassadors</h2>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
 
-	<!-- DAN MARKUP! -->
-	<div class="footer">
-		<div class="footer-ribbon"></div>
-		<div class="footer-container">
-			<!-- STORE LOCATOR -->
-			<div class="store-locator">
-				<h1 class="title">store <span>locator</span></h1>
-				<img class="title-line" src="images/store-locator-title-line.png" />
-				<img class="store-map" src="images/store-map.png" alt="" />
-				<img class="find-it" src="images/find-it.png" alt="" />
-				<img class="store-locator-side-divider" src="images/store-locator-side-divider.png" alt="" />
-			</div>
-			<!-- SPECIAL EVENTS -->
-			<div class="special-events">
-				<h1 class="title">special <span>events</span></h1>
-				<img class="title-line" src="images/store-locator-title-line.png" />
-				<div class="event-schedule">
-					<div class="area">
-						<p>party in cabo</p>
-						<p>04/23/13</p>
-						<img class="events-divider" src="images/events-divider.png" alt="" />
-						<img src="images/event-side-divider.png" alt="" />
-					</div>
-					<div class="area">
-						<p>party in cabo</p>
-						<p>04/23/13</p>
-						<img class="events-divider" src="images/events-divider.png" alt="" />
-						<img src="images/event-side-divider.png" alt="" />
-					</div>
-					<div class="area">
-						<p>party in cabo</p>
-						<p>04/23/13</p>
-						<img class="events-divider" src="images/events-divider.png" alt="" />
-						<img src="images/event-side-divider.png" alt="" />
-					</div>
-					<div class="area">
-						<p>party in cabo</p>
-						<p>04/23/13</p>
-						<img class="events-divider" src="images/events-divider.png" alt="" />
-						<img src="images/event-side-divider.png" alt="" />
-					</div>
-					<div class="area">
-						<p>party in cabo</p>
-						<p>04/23/13</p>
-						<img class="events-divider" src="images/events-divider.png" alt="" />
-						<img src="images/event-side-divider.png" alt="" />
-					</div>
-					<div class="area">
-						<p>party in cabo</p>
-						<p>04/23/13</p>
-						<img class="events-divider" src="images/events-divider.png" alt="" />
-						<img src="images/event-side-divider.png" alt="" />
-					</div>
+		<!-- DAN MARKUP! -->
+		<div class="footer">
+			<div class="footer-ribbon"></div>
+			<div class="footer-container">
+				<!-- STORE LOCATOR -->
+				<div class="store-locator">
+					<h1 class="title">store <span>locator</span></h1>
+					<img class="title-line" src="images/store-locator-title-line.png" />
+					<img class="store-map" src="images/store-map.png" alt="" />
+					<img class="find-it" src="images/find-it.png" alt="" />
+					<img class="store-locator-side-divider" src="images/store-locator-side-divider.png" alt="" />
 				</div>
-				<img class="events-button" src="images/events-button.png" alt="" />
-				<img class="store-locator-side-divider" src="images/store-locator-side-divider.png" alt="" />
-			</div>
-			<!-- CONTACT BON FUN -->
-			<div class="contact-bon-fun">
-				<img class="footer-logo" src="images/footer-logo.png" alt="" />
-				<img class="sales-media" src="images/sales-media.png" alt="" />
-				<div class="contact-left">
-					<p>sales</p>
-					<p>media</p>
+				<!-- SPECIAL EVENTS -->
+				<div class="special-events">
+					<h1 class="title">special <span>events</span></h1>
+					<img class="title-line" src="images/store-locator-title-line.png" />
+					<div class="event-schedule">
+						<div class="area">
+							<p>party in cabo</p>
+							<p>04/23/13</p>
+							<img class="events-divider" src="images/events-divider.png" alt="" />
+							<img src="images/event-side-divider.png" alt="" />
+						</div>
+						<div class="area">
+							<p>party in cabo</p>
+							<p>04/23/13</p>
+							<img class="events-divider" src="images/events-divider.png" alt="" />
+							<img src="images/event-side-divider.png" alt="" />
+						</div>
+						<div class="area">
+							<p>party in cabo</p>
+							<p>04/23/13</p>
+							<img class="events-divider" src="images/events-divider.png" alt="" />
+							<img src="images/event-side-divider.png" alt="" />
+						</div>
+						<div class="area">
+							<p>party in cabo</p>
+							<p>04/23/13</p>
+							<img class="events-divider" src="images/events-divider.png" alt="" />
+							<img src="images/event-side-divider.png" alt="" />
+						</div>
+						<div class="area">
+							<p>party in cabo</p>
+							<p>04/23/13</p>
+							<img class="events-divider" src="images/events-divider.png" alt="" />
+							<img src="images/event-side-divider.png" alt="" />
+						</div>
+						<div class="area">
+							<p>party in cabo</p>
+							<p>04/23/13</p>
+							<img class="events-divider" src="images/events-divider.png" alt="" />
+							<img src="images/event-side-divider.png" alt="" />
+						</div>
+					</div>
+					<img class="events-button" src="images/events-button.png" alt="" />
+					<img class="store-locator-side-divider" src="images/store-locator-side-divider.png" alt="" />
 				</div>
-				<div class="contact-right">
-					<p>800 564 8970</p>
-					<img class="footer-phone" src="images/footer-phone.png" alt="" >
+				<!-- CONTACT BON FUN -->
+				<div class="contact-bon-fun">
+					<img class="footer-logo" src="images/footer-logo.png" alt="" />
+					<img class="sales-media" src="images/sales-media.png" alt="" />
+					<div class="contact-left">
+						<p>sales</p>
+						<p>media</p>
+					</div>
+					<div class="contact-right">
+						<p>800 564 8970</p>
+						<img class="footer-phone" src="images/footer-phone.png" alt="" >
+					</div>
+					<div class="fb-facepile" data-href="http://facebook.com/doyoubonfun" data-action="Comma separated list of action of action types" data-width="250" data-max-rows="2"></div>
 				</div>
-				<img class="contact-us-bottom-divider" src="images/contact-us-bottom-divider.png" alt="" />
-				<img class="fb-icon" src="images/fb-icon.png" alt="" />
-				<p class="fb-likes">400 People like this</p>
-				<img class="fb-users" src="images/fb-users.png" alt="" />
+				<!-- FOOTER NAVIGATION -->
+				<div class="footer-nav">
+					<ul>
+						<li><a href="#">home</a></li>
+						<li><a href="#">events</a></li>
+						<li><a href="#">get social</a></li>
+						<li><a href="#">store locator</a></li>
+						<li><a href="#">products</a></li>
+						<li><a href="#">blog</a></li>
+						<li><a href="#">about us</a></li>
+						<li><a href="#">contact us</a></li>
+					</ul>
+				</div>
+				<img class="footer-bottom-section-divider" src="images/footer-bottom-section-divider.png" alt="" />
+				<div class="bottom-icons">
+					<ul>
+						<li><img src="images/instagram.png" alt=""/></li>
+						<li><img src="images/facebook.png" alt=""/></li>
+						<li><img src="images/twitter.png" alt=""/></li>
+						<li><img src="images/linkedin.png" alt=""/></li>
+					</ul>
+				</div>
 			</div>
-			<!-- FOOTER NAVIGATION -->
-			<div class="footer-nav">
-				<ul>
-					<li><a href="#">home</a></li>
-					<li><a href="#">events</a></li>
-					<li><a href="#">get social</a></li>
-					<li><a href="#">store locator</a></li>
-					<li><a href="#">products</a></li>
-					<li><a href="#">blog</a></li>
-					<li><a href="#">about us</a></li>
-					<li><a href="#">contact us</a></li>
-				</ul>
-			</div>
-			<img class="footer-bottom-section-divider" src="images/footer-bottom-section-divider.png" alt="" />
-			<div class="bottom-icons">
-				<ul>
-					<li><img src="images/instagram.png" alt=""/></li>
-					<li><img src="images/facebook.png" alt=""/></li>
-					<li><img src="images/twitter.png" alt=""/></li>
-					<li><img src="images/linkedin.png" alt=""/></li>
-				</ul>
+
+			<!-- USED FOR BOTTOM FULL WIDTH SECTION -->
+			<div class="footer-bottom-section">
+				<div class="footer-mobile-bonfun"></div>
 			</div>
 		</div>
 
-		<!-- USED FOR BOTTOM FULL WIDTH SECTION -->
-		<div class="footer-bottom-section"></div>
-	</div>
-
-<script type="text/javascript" src="function.js"></script>
-</body>
-</html>
+		<script type="text/javascript" src="function.js"></script>
+	</body>
+	</html>
