Cleaned up a bit, added swipe and mobile stuff

--- a/index.html
+++ b/index.html
@@ -5,35 +5,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
 	<link rel="stylesheet" type="text/css" href="normalize.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link type="text/css" rel="stylesheet" href="http://fast.fonts.net/cssapi/59138cf6-6f30-458d-ba53-73aa9b77f73d.css"/>
+	<!-- <link type="text/css" rel="stylesheet" href="http://fast.fonts.net/cssapi/59138cf6-6f30-458d-ba53-73aa9b77f73d.css"/> -->
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
 	<script type="text/javascript" src="js/Jcarousel.js"></script>
-	<script>
-		$(document).ready(function(){
-			$('.pull').click(function() {
-				$('.nav-menu').toggle();
-			});
-
-			$('.process-button').click(function() {
-				$('.process-content').css("display","block");
-				$('.process-content').animate({"height":"395px"},1000);
-				$('.container').css("display","block");
-				$('.grid-area').css('margin-top','0px');
-			});
-
-			$(".carousel").CloudCarousel(		
-			{			
-				xPos: 128,
-				yPos: 32,
-				xRadius: 52,
-				yRadius: 32,
-				autoRotate: 'left',
-				autoRotateDelay: 3000,
-				bringToFront: true,
-			});
-		});
-
-	</script>
 </head>
 <body>
 	
@@ -107,20 +81,82 @@
 					<img src="images/process-aging-icon.png" class="process-aging-icon process-icon" />
 					<img src="images/process-infusion-icon.png" class="process-infusion-icon process-icon" />
 				</div>
-				<div class="process-panel">
-					<div class="process-small-nav-left"></div>
-					<div class="process-small-nav-right"></div>
-					<div class="process-stage-icon">
-						<div class="process-lines-outer">
-							<div class="process-lines-inner">
-								<h6>Stage<span>1</span></h6>
+				<div class="process-viewport">
+					<div class="process-panel-string">
+						<div class="process-panel">
+							<div class="process-small-nav-right"></div>
+							<div class="process-stage-icon">
+								<div class="process-lines-outer">
+									<div class="process-lines-inner">
+										<h6>Stage<span>1</span></h6>
+									</div>
+								</div>
+								<img src="images/process-history-logo.png" />
 							</div>
+							<img src="images/process-history-image.png" />
+							<h2>The History of our cognac</h2>
+							<p>Lorem ipsum dolor sit amet, an tempor inermis sapientem sed. Illum nostrud omittantur usu in, mea stet nibh veniam ne, no mundi consulatu pro. Harum accuesata deseruisse ea vis.</p>
 						</div>
-						<img src="images/process-history-logo.png" />
+						<div class="process-panel">
+							<div class="process-small-nav-left"></div>
+							<div class="process-small-nav-right"></div>
+							<div class="process-stage-icon">
+								<div class="process-lines-outer">
+									<div class="process-lines-inner">
+										<h6>Stage<span>1</span></h6>
+									</div>
+								</div>
+								<img src="images/process-history-logo.png" />
+							</div>
+							<img src="images/process-history-image.png" />
+							<h2>The History of our cognac</h2>
+							<p>Lorem ipsum dolor sit amet, an tempor inermis sapientem sed. Illum nostrud omittantur usu in, mea stet nibh veniam ne, no mundi consulatu pro. Harum accuesata deseruisse ea vis.</p>
+						</div>
+						<div class="process-panel">
+							<div class="process-small-nav-left"></div>
+							<div class="process-small-nav-right"></div>
+							<div class="process-stage-icon">
+								<div class="process-lines-outer">
+									<div class="process-lines-inner">
+										<h6>Stage<span>1</span></h6>
+									</div>
+								</div>
+								<img src="images/process-history-logo.png" />
+							</div>
+							<img src="images/process-history-image.png" />
+							<h2>The History of our cognac</h2>
+							<p>Lorem ipsum dolor sit amet, an tempor inermis sapientem sed. Illum nostrud omittantur usu in, mea stet nibh veniam ne, no mundi consulatu pro. Harum accuesata deseruisse ea vis.</p>
+						</div>
+						<div class="process-panel">
+							<div class="process-small-nav-left"></div>
+							<div class="process-small-nav-right"></div>
+							<div class="process-stage-icon">
+								<div class="process-lines-outer">
+									<div class="process-lines-inner">
+										<h6>Stage<span>1</span></h6>
+									</div>
+								</div>
+								<img src="images/process-history-logo.png" />
+							</div>
+							<img src="images/process-history-image.png" />
+							<h2>The History of our cognac</h2>
+							<p>Lorem ipsum dolor sit amet, an tempor inermis sapientem sed. Illum nostrud omittantur usu in, mea stet nibh veniam ne, no mundi consulatu pro. Harum accuesata deseruisse ea vis.</p>
+						</div>
+						<div class="process-panel">
+							<div class="process-small-nav-left"></div>
+							<div class="process-stage-icon">
+								<div class="process-lines-outer">
+									<div class="process-lines-inner">
+										<h6>Stage<span>1</span></h6>
+									</div>
+								</div>
+								<img src="images/process-history-logo.png" />
+							</div>
+							<img src="images/process-history-image.png" />
+							<h2>The History of our cognac</h2>
+							<p>Lorem ipsum dolor sit amet, an tempor inermis sapientem sed. Illum nostrud omittantur usu in, mea stet nibh veniam ne, no mundi consulatu pro. Harum accuesata deseruisse ea vis.</p>
+						</div>
 					</div>
-					<img src="images/process-history-image.png" />
-					<h2>The History of our cognac</h2>
-					<p>Lorem ipsum dolor sit amet, an tempor inermis sapientem sed. Illum nostrud omittantur usu in, mea stet nibh veniam ne, no mundi consulatu pro. Harum accuesata deseruisse ea vis.</p>
 				</div>
 			</div>
 		</div>
@@ -310,5 +346,7 @@
 		</div>
 
 		<script type="text/javascript" src="function.js"></script>
+		<script type="text/javascript" src="js/jquery-ui-1.10.3.custom.js"></script>
+		<script type="text/javascript" src="js/jquery.ui.touch.js"></script>
 	</body>
 	</html>
