Fullscreen process functional, grid functional

--- a/index.html
+++ b/index.html
@@ -1,39 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>test</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
-	<link rel="stylesheet" type="text/css" href="normalize.css">
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<!-- <link type="text/css" rel="stylesheet" href="http://fast.fonts.net/cssapi/59138cf6-6f30-458d-ba53-73aa9b77f73d.css"/> -->
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-	<script type="text/javascript" src="js/Jcarousel.js"></script>
-</head>
-<body>
-	
-	<div class="header">
-		<div class="container">
-			<div class="logo">
-			</div>
-			<div class="pull">
-			</div>
-			<div class="nav-menu">
-				<ul id="nav">
-					<li><a>Events</a></li>
-					<li><a>Get Social</a></li>
-					<li><a>Store Locator</a></li>
-					<li><a>Products</a></li>
-					<li><a>Blog</a></li>
-				</ul>
-			</div>
-			<div class="social-media">
-				<img src="images/instagram.png" alt="instagram">
-				<img src="images/facebook.png" alt="facebook">
-				<img src="images/twitter.png" alt="twitter">
-				<img src="images/linkedin.png" alt="linkedin">
-			</div>
-		</div>
-	</div>
+<?php get_header(); ?>
 	<div class="slider-area">
 		<div class="slider">
 			<ul>
@@ -243,110 +208,4 @@
 				</div>
 			</div>
 		</div>
-
-		<!-- DAN MARKUP! -->
-		<div class="footer">
-			<div class="footer-ribbon"></div>
-			<div class="footer-container">
-				<!-- STORE LOCATOR -->
-				<div class="store-locator">
-					<h1 class="title">store <span>locator</span></h1>
-					<img class="title-line" src="images/store-locator-title-line.png" />
-					<img class="store-map" src="images/store-map.png" alt="" />
-					<img class="find-it" src="images/find-it.png" alt="" />
-					<img class="store-locator-side-divider" src="images/store-locator-side-divider.png" alt="" />
-				</div>
-				<!-- SPECIAL EVENTS -->
-				<div class="special-events">
-					<h1 class="title">special <span>events</span></h1>
-					<img class="title-line" src="images/store-locator-title-line.png" />
-					<div class="event-schedule">
-						<div class="area">
-							<p>party in cabo</p>
-							<p>04/23/13</p>
-							<img class="events-divider" src="images/events-divider.png" alt="" />
-							<img src="images/event-side-divider.png" alt="" />
-						</div>
-						<div class="area">
-							<p>party in cabo</p>
-							<p>04/23/13</p>
-							<img class="events-divider" src="images/events-divider.png" alt="" />
-							<img src="images/event-side-divider.png" alt="" />
-						</div>
-						<div class="area">
-							<p>party in cabo</p>
-							<p>04/23/13</p>
-							<img class="events-divider" src="images/events-divider.png" alt="" />
-							<img src="images/event-side-divider.png" alt="" />
-						</div>
-						<div class="area">
-							<p>party in cabo</p>
-							<p>04/23/13</p>
-							<img class="events-divider" src="images/events-divider.png" alt="" />
-							<img src="images/event-side-divider.png" alt="" />
-						</div>
-						<div class="area">
-							<p>party in cabo</p>
-							<p>04/23/13</p>
-							<img class="events-divider" src="images/events-divider.png" alt="" />
-							<img src="images/event-side-divider.png" alt="" />
-						</div>
-						<div class="area">
-							<p>party in cabo</p>
-							<p>04/23/13</p>
-							<img class="events-divider" src="images/events-divider.png" alt="" />
-							<img src="images/event-side-divider.png" alt="" />
-						</div>
-					</div>
-					<img class="events-button" src="images/events-button.png" alt="" />
-					<img class="store-locator-side-divider" src="images/store-locator-side-divider.png" alt="" />
-				</div>
-				<!-- CONTACT BON FUN -->
-				<div class="contact-bon-fun">
-					<img class="footer-logo" src="images/footer-logo.png" alt="" />
-					<img class="sales-media" src="images/sales-media.png" alt="" />
-					<div class="contact-left">
-						<p>sales</p>
-						<p>media</p>
-					</div>
-					<div class="contact-right">
-						<p>800 564 8970</p>
-						<img class="footer-phone" src="images/footer-phone.png" alt="" >
-					</div>
-					<div class="fb-facepile" data-href="http://facebook.com/doyoubonfun" data-action="Comma separated list of action of action types" data-width="250" data-max-rows="2"></div>
-				</div>
-				<!-- FOOTER NAVIGATION -->
-				<div class="footer-nav">
-					<ul>
-						<li><a href="#">home</a></li>
-						<li><a href="#">events</a></li>
-						<li><a href="#">get social</a></li>
-						<li><a href="#">store locator</a></li>
-						<li><a href="#">products</a></li>
-						<li><a href="#">blog</a></li>
-						<li><a href="#">about us</a></li>
-						<li><a href="#">contact us</a></li>
-					</ul>
-				</div>
-				<img class="footer-bottom-section-divider" src="images/footer-bottom-section-divider.png" alt="" />
-				<div class="bottom-icons">
-					<ul>
-						<li><img src="images/instagram.png" alt=""/></li>
-						<li><img src="images/facebook.png" alt=""/></li>
-						<li><img src="images/twitter.png" alt=""/></li>
-						<li><img src="images/linkedin.png" alt=""/></li>
-					</ul>
-				</div>
-			</div>
-
-			<!-- USED FOR BOTTOM FULL WIDTH SECTION -->
-			<div class="footer-bottom-section">
-				<div class="footer-mobile-bonfun"></div>
-			</div>
-		</div>
-
-		<script type="text/javascript" src="function.js"></script>
-		<script type="text/javascript" src="js/jquery-ui-1.10.3.custom.js"></script>
-		<script type="text/javascript" src="js/jquery.ui.touch.js"></script>
-	</body>
-	</html>
+		<?php get_footer(); ?>
